--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,6 @@ tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
 }
 
-
-
 repositories {
         
      maven { url "https://repo.maven.apache.org/maven2" }
@@ -27,4 +25,12 @@ dependencies {
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'1.5.6.RELEASE') {
 exclude(module: 'commons-logging')
     }
+}
+
+bootRun {
+    addResources = true
+}
+
+bootRepackage {
+    mainClass = 'package com.integrador.Integrador3Application'
 }
