--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.contextPath=/integrador3
 server.port=8000
 spring.datasource.url= jdbc:postgresql://localhost:5432/integrador3
 
-<!--Gerear nomes no padrao definido->
+#Gerar nomes no padrao definido
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
